--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PH'
+- GITenberg
 title: 'Végzetes tévedés: Regény'
 url: http://www.gutenberg.org/ebooks/33026
